--- a/app/templates/errors/err500.html.j2
+++ b/app/templates/errors/err500.html.j2
@@ -1,28 +1,11 @@
 {% extends "base.html.j2" %}
-{% block title %}
-    Něco se nepovedlo
-{% endblock %}
-
-{% block style %}{% endblock %}
-
-{% block script %}{% endblock %}
+{% block title %} něco se nepovedlo {% endblock %}
 
 {% block content %}
-    {% include('navbar.html.j2') %}
-    <div class="container">
-    	<div class="col-12 error_main">
-            <table>
-            <td class="col-2"></td>
 
-            <td class="col-8">
-        		<h1>Něco se nepovedlo.</h1>
-                <a href="/feedback">Napište mi</a> a já to zkusím rychle opravit.
-                <p>Zatím se můžete vrátit na <a href="/">hlavní stránku</a></p>
-            </td>
+<h1> něco se nepovedlo. </h1>
+<a href="/feedback"> napište mi </a> a já to zkusím rychle opravit.
+<p> zatím se můžete vrátit na <a href="/"> hlavní stránku </a></p>
 
-            <td class="col-2"></td>
-            </table>
-    	</div>
-    </div>
 {% endblock %}
 
