--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -28,18 +28,23 @@
     {% endblock %}
     
 
-    {% block style %} {% endblock %}
+    {% block style %}{% endblock %}
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}jan peterka{% endblock %}</title>
 {% endblock head %}
 </head>
 <body>
-    <div id="content container">
+    {% block navbar %}
+        {% include('navbar.html.j2') %}
+    {% endblock %}
+    
+    <div class="container mt-5">
     	{% block content %}{% endblock %}
     </div>
+    
     <div id="footer" class="footer">
         {% block footer %}
-        &copy; Copyright since 2017 by Jan Peterka</a>.
+        &copy; Copyright since 2017 by jan peterka</a>.
         {% endblock %}
     </div>
 
