--- a/app/templates/errors/shutdown.html.j2
+++ b/app/templates/errors/shutdown.html.j2
@@ -1,23 +1,18 @@
 {% extends "base.html.j2" %}
-{% block title %}
-    Plánovaná odstávka
-{% endblock %}
+{% block title %} plánovaná odstávka {% endblock %}
 
 {% block content %}
-    {% include('navbar.html.j2') %}
-    <div class="container">
-        <div class="col-12 main">
-            <table>
-            <td class="col-2"></td>
+<div class="col-12 main">
+    <table>
+    <td class="col-2"></td>
 
-            <td class="col-8">
-            	<h1>Web je v dočasně mimo provoz</h1>
-                Odstávka by neměla trvat déle než 24 hodin.
-            </td>
+    <td class="col-8">
+    	<h1> Web je v dočasně mimo provoz </h1>
+        Odstávka by neměla trvat déle než 24 hodin.
+    </td>
 
-            <td class="col-2"></td>
-            </table>
-        </div>  
-    </div>
+    <td class="col-2"></td>
+    </table>
+</div>  
 {% endblock %}
 
