--- a/app/templates/integrations/main.html.j2
+++ b/app/templates/integrations/main.html.j2
@@ -1,20 +1,19 @@
 {% extends "base.html.j2" %}
-{% block title %}Integrations - {{ current_user.email }}{% endblock %}
-{% block script %}{% endblock %}
+{% block title %} integrations - {{ current_user.email }} {% endblock %}
 
 {% block content %}
-	{% include('navbar.html.j2') %}
-    <div class="container">
-    	integrations
-    	<div>Your secret key - {{ current_user.secret_key }}</div>
-		<div>Toggl token - {{ current_user.toggl_token }}</div>
 
-		<div>
-	    	Tokens
-	    	{% for token in current_user.tokens %}
-	    		<li>{{ token.service.name }} - {{ token.value }}</li>
-	    	{% endfor %}
-		</div>
-    </div>
+<h1> integrations </h1>
+
+<div> Your secret key - {{ current_user.secret_key }}</div>
+<div> Toggl token - {{ current_user.toggl_token }}</div>
+
+<div>
+	Tokens
+	{% for token in current_user.tokens %}
+		<li>{{ token.service.name }} - {{ token.value }}</li>
+	{% endfor %}
+</div>
+
 {% endblock %}
 
