--- a/app/templates/main/portfolio.html.j2
+++ b/app/templates/main/portfolio.html.j2
@@ -2,73 +2,71 @@
 {% block title %} portfolio {% endblock %}
 
 {% block content %}
-    {% include('navbar.html.j2') %}
-    <div class="container mt-5">
-        <div class="mt-5">
-            <div style="text-align: center;">    
-                <span style="font-weight: bold;"> dělám věci </span> <br>
-                <span > někdy </span> <br>
-                <em> když se mi chce </em> <br>
-                <br>
-            </div>
 
-            <div class="mt-3" style="text-align: left;">    
-                <span> udělal jsem třeba </span><br>
-                
-                <br>
-                
-                <span class="ml-2">
-                    <a href="ketokalkulacka.cz" style="color: grey;">
-                        <strong> ketokalkulačku </strong> 
-                    </a>
-                </span><br>
-                <span class="ml-2 font-italic">
-                    která pomáhá lidem se speciální dietou
-                </span><br>
-            
-                <br>
-
-                <span class="ml-2">
-                    <a href="skautskakucharka.cz" style="color: grey;">
-                        <strong> skautskou kuchařku </strong> 
-                    </a>
-                </span><br>
-                <span class="ml-2 font-italic">
-                    která usnadňuje vytváření a správu jídelníčků a nákupů
-                </span><br>
-                <span class="ml-2 font-italic">
-                    na (zejména) velkých akcích - kurzy, tábory
-                </span><br>
-
-                <br>
-
-                <span> a pár hovadinek </span><br>
-
-                <br>
-                
-                <span class="ml-2">
-                    <a href="{{url_for('main.show_better_life')}}" style="color: grey;">
-                        <strong> náhodná věc, kterou si můžu zlepšit den </strong> 
-                    </a>
-                </span><br>
-
-            </div>
-
-            <div class="mt-4" style="text-align: right;">    
-                <span> baví mě hrát na kytaru </span><br>
-                
-                <br>
-                
-                <span class="ml-2">
-                    proto tu mám 
-                    <a href="{{ url_for('main.show_songbooks') }}" style="color: grey;">
-                        <strong> zpěvníky </strong> 
-                    </a>
-                </span><br>
-            
-                <br>
-            </div>
-        </div>
+<div class="mt-5">
+    <div style="text-align: center;">    
+        <span style="font-weight: bold;"> dělám věci </span> <br>
+        <span > někdy </span> <br>
+        <em> když se mi chce </em> <br>
+        <br>
     </div>
+
+    <div class="mt-3" style="text-align: left;">    
+        <span> udělal jsem třeba </span><br>
+        
+        <br>
+        
+        <span class="ml-2">
+            <a href="ketokalkulacka.cz" style="color: grey;">
+                <strong> ketokalkulačku </strong> 
+            </a>
+        </span><br>
+        <span class="ml-2 font-italic">
+            která pomáhá lidem se speciální dietou
+        </span><br>
+    
+        <br>
+
+        <span class="ml-2">
+            <a href="skautskakucharka.cz" style="color: grey;">
+                <strong> skautskou kuchařku </strong> 
+            </a>
+        </span><br>
+        <span class="ml-2 font-italic">
+            která usnadňuje vytváření a správu jídelníčků a nákupů
+        </span><br>
+        <span class="ml-2 font-italic">
+            na (zejména) velkých akcích - kurzy, tábory
+        </span><br>
+
+        <br>
+
+        <span> a pár hovadinek </span><br>
+
+        <br>
+        
+        <span class="ml-2">
+            <a href="{{url_for('main.better')}}" style="color: grey;">
+                <strong> náhodná věc, kterou si můžu zlepšit den </strong> 
+            </a>
+        </span><br>
+
+    </div>
+
+    <div class="mt-4" style="text-align: right;">    
+        <span> baví mě hrát na kytaru </span><br>
+        
+        <br>
+        
+        <span class="ml-2">
+            proto tu mám 
+            <a href="{{ url_for('main.show_songbooks') }}" style="color: grey;">
+                <strong> zpěvníky </strong> 
+            </a>
+        </span><br>
+    
+        <br>
+    </div>
+
 {% endblock %}
 
