--- a/app/templates/main/songbooks.html.j2
+++ b/app/templates/main/songbooks.html.j2
@@ -1,87 +1,73 @@
 {% extends "base.html.j2" %}
-{% block title %}
-    Zpěvníky
-{% endblock %}
+{% block title %} zpěvníky {% endblock %}
 
 {% block style %}
     <style type="text/css" media="screen">
-
     div.main {
         margin-left: 5%; 
-    }
-
-    div.row {
-        margin-top: 5px;
     }
 
     span.songbook {
         border-radius: 6px;
         background-color: #eff6ff;
+        text-align: center;
         box-shadow: 0 0 0 1px rgba(89,105,129,.1),0 1px 3px 0 rgba(89,105,129,.1),0 1px 2px 0 rgba(0,0,0,.05);
-        padding: 6px 30px;
+        padding: 0.4rem;
     }
 
     span.download {
-        margin-right: 10px;
+        margin-right: 0.7rem;
     }
 
     span.download a.songbook i{
         border-radius: 6px;
         background-color: #eff6ff;
         box-shadow: 0 0 0 1px rgba(89,105,129,.1),0 1px 3px 0 rgba(89,105,129,.1),0 1px 2px 0 rgba(0,0,0,.05);
-        padding: 10px 30px;
+        padding: 0.7rem 2.1rem;
     }
-
-     span.download a.songbook i.fa-file-pdf {
-        color: red;
-     }
-
-     span.download a.songbook i.fa-file-word {
-        color: blue;
-     }
-
     </style>    
 {% endblock %}
 
-{% block script %}
-
-{% endblock %}
-
 {% block content %}
-    {% include('navbar.html.j2') %}
-    <div class="container" style="margin-top:20px">
-        <div class="main">
+<div class="mt-5">
 
-            {% for folder in folders %}
+    {% for folder in folders %}
 
-            	<div class="row col-8">
-                    <span class="songbook col-8" >
-                        {{ folder.name }}
-                    </span>
+    	<div class="row col-8">
+            <span class="songbook col-8" >
+                {% if folder.name == "Zpevnik" %}
+                    zpěvník
+                {% else %}
+                    {{ folder.name }}
+                {% endif %}
+            </span>
 
-                    <span class="col-4">
-                        
-                        <span class="download">
-                            <a class="songbook" href="/songbooks/{{ folder.name }}.pdf" download> <i class="fas fa-file-pdf"></i></a>
-                        </span>
+            <span class="col-4">
+                
+                <span class="download">
+                    <a class="songbook" href="/songbooks/{{ folder.name }}.pdf" download><i class="fas fa-file-pdf"></i></a>
+                </span>
 
-                        <span class="download">
-                            <a class="songbook" href="/songbooks/{{ folder.name }}.docx" download><i class="fas fa-file-word"></i></a>
-                        </span>
+                <span class="download">
+                    <a class="songbook" href="/songbooks/{{ folder.name }}.docx" download><i class="fas fa-file-word"></i></a>
+                </span>
 
-                    </span>
-            	</div>
-			
-            {% endfor %}
+            </span>
+    	</div>
+	
+    {% endfor %}
 
-        <div style="margin-left: 10px; margin-top: 10px">
-            a další zpěvníky, které mám rád: <br>
-            <a href="http://nerez.szm.com/nerez.pdf">Nerez</a> <br>
-            <a href="http://navarova.szm.com/navarova.pdf">Navarová</a> <br>
-            <a href="https://www.traband.net/pisnik.pdf">Traband (oficiální)</a> <br>
-            <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_spiritual.pdf">Spirituál kvintet</a> <br>
-        </div>
-            
-        </div>
+    <div style="margin-left: 10px; margin-top: 10px">
+        a další zpěvníky, které se hodí: <br>
+        <a href="http://nerez.szm.com/nerez.pdf"> Nerez </a> <br>
+        <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_nerez.pdf"> Nerez podruhé [pixy]</a> <br>
+        <a href="http://navarova.szm.com/navarova.pdf"> Zuzana Navarová a KOA </a> <br>
+        <a href="https://www.traband.net/pisnik.pdf"> Traband (oficiální) </a> <br>
+        <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_spiritual.pdf"> Spirituál kvintet [pixy] </a> <br>
+        <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_redl.pdf"> Vlasta Redl [pixy]</a> <br>
+        <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_ebeni.pdf"> Bratři Ebenové [pixy]</a> <br>
+        <a href="https://www.pixy.cz/downloads/zpevniky/ZPEVNIK_nohavica.pdf"> Jaromír Nohavica [pixy]</a> <br>
     </div>
+    
+</div>
 {% endblock %}
