--- a/app/templates/poetry/index.html.j2
+++ b/app/templates/poetry/index.html.j2
@@ -1,5 +1,5 @@
 {% extends "base.html.j2" %}
-{% block title %} Básně hor {% endblock %}
+{% block title %} básně hor {% endblock %}
 
 {% block links %}
 	{{ super() }}
@@ -8,71 +8,72 @@
 {% endblock %}
 
 {% block content %}
-	{% include('navbar.html.j2') %}
-	<div class="row">
-		<div class="col">
-			<ul id="all_poetry_list">
-				{% for poetry in all_poetry %}	
-				<li data-name="{{ poetry.name }}"
-					data-id="{{ poetry.id }}"
-					data-latitude="{{ poetry.latitude }}"
-					data-longitude="{{ poetry.longitude }}"
-					>
-					<a href="/poetry/show/{{ poetry.id }}">{{ poetry.name }}</a>
-				</li>			
-				{% endfor %}	
-			</ul>
-		</div>
-	
-		<div class="col">
-			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
-		</div>
-	
+
+<div class="row">
+	<div class="col">
+		<ul id="all_poetry_list">
+			{% for poetry in all_poetry %}	
+			<li data-name="{{ poetry.name }}"
+				data-id="{{ poetry.id }}"
+				data-latitude="{{ poetry.latitude }}"
+				data-longitude="{{ poetry.longitude }}"
+				>
+				<a href="/poetry/show/{{ poetry.id }}">{{ poetry.name }}</a>
+			</li>			
+			{% endfor %}	
+		</ul>
 	</div>
-		
-	<script type="text/javascript">
-      	/* Create map */
-		var center = SMap.Coords.fromWGS84(14.41, 50.08);
-		map = new SMap(JAK.gel("map"), center, 10);
-		map.addDefaultLayer(SMap.DEF_BASE).enable();
-		map.addDefaultControls();
-		map.addControl(new SMap.Control.Sync()); /* Aby mapa reagovala na změnu velikosti průhledu */
-		var mouse = new SMap.Control.Mouse(SMap.MOUSE_PAN | SMap.MOUSE_WHEEL | SMap.MOUSE_ZOOM); /* Ovládání myší */
-		map.addControl(mouse);
-		map.getSignals().addListener(window, "map-click", this.click); /* Při signálu kliknutí volat tuto funkci */  
-		layer = add_marker_layer(map);
 
-		add_all_markers(layer);
+	<div class="col">
+		<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
+	</div>
 
-    function add_marker_layer(map){
-		var layer = new SMap.Layer.Marker();
-		map.addLayer(layer);
-		layer.enable();
-		return layer;
+</div>
+	
+<script type="text/javascript">
+  	/* Create map */
+	var center = SMap.Coords.fromWGS84(14.41, 50.08);
+	map = new SMap(JAK.gel("map"), center, 10);
+	map.addDefaultLayer(SMap.DEF_BASE).enable();
+	map.addDefaultControls();
+	map.addControl(new SMap.Control.Sync()); /* Aby mapa reagovala na změnu velikosti průhledu */
+	var mouse = new SMap.Control.Mouse(SMap.MOUSE_PAN | SMap.MOUSE_WHEEL | SMap.MOUSE_ZOOM); /* Ovládání myší */
+	map.addControl(mouse);
+	map.getSignals().addListener(window, "map-click", this.click); /* Při signálu kliknutí volat tuto funkci */  
+	layer = add_marker_layer(map);
+
+	add_all_markers(layer);
+
+function add_marker_layer(map){
+	var layer = new SMap.Layer.Marker();
+	map.addLayer(layer);
+	layer.enable();
+	return layer;
+}
+
+function add_marker(layer, coords, name){
+
+	var card = new SMap.Card();
+	card.getHeader().innerHTML = "<strong>" + name + "</strong>";
+
+	var options = { 
+	    title: name
+	};
+
+	var marker = new SMap.Marker(coords, name, options);
+	marker.decorate(SMap.Marker.Feature.Card, card);
+	layer.addMarker(marker);
+	return marker
+}
+
+function add_all_markers(layer) {
+	var list = document.getElementById('all_poetry_list').getElementsByTagName('li');
+	for (var i = list.length - 1; i >= 0; i--) {
+		coords = SMap.Coords.fromWGS84(list[i].dataset.latitude, list[i].dataset.longitude)
+		add_marker(layer, coords, list[i].dataset.name)
     }
+}
+</script>
 
-    function add_marker(layer, coords, name){
-
-    	var card = new SMap.Card();
-		card.getHeader().innerHTML = "<strong>" + name + "</strong>";
-
-		var options = { 
-		    title: name
-		};
-
-		var marker = new SMap.Marker(coords, name, options);
-		marker.decorate(SMap.Marker.Feature.Card, card);
-		layer.addMarker(marker);
-		return marker
-    }
-
-    function add_all_markers(layer) {
-    	var list = document.getElementById('all_poetry_list').getElementsByTagName('li');
-    	for (var i = list.length - 1; i >= 0; i--) {
-    		coords = SMap.Coords.fromWGS84(list[i].dataset.latitude, list[i].dataset.longitude)
-    		add_marker(layer, coords, list[i].dataset.name)
-	    }
-	}
-	</script>
 {% endblock %}
 
