--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -44,7 +44,7 @@
     
     <div id="footer" class="footer">
         {% block footer %}
-        &copy; Copyright since 2017 by jan peterka</a>.
+        &copy; copyright since 2017 by jan peterka</a>.
         {% endblock %}
     </div>
 
