--- a/app/templates/main/dashboard.html.j2
+++ b/app/templates/main/dashboard.html.j2
@@ -2,5 +2,10 @@
 {% block title %} jan peterka {% endblock %}
 
 {% block content %}
+
+<div class="text-center pt-5" style="color:grey">
+	stránka je v rekonstrukci
+</div>
+
 {% endblock %}
 
