more lower letters

--- a/app/templates/main/better_life.html.j2
+++ b/app/templates/main/better_life.html.j2
@@ -14,13 +14,13 @@
 	
 	<div style="margin-top: 23%">
     	<div class="tab" data-tab="task" data-active=true >
-    		<h5>Today you can:</h5>
-    		<h1>{{ today_task }}</h1>
+    		<h5> today you can: </h5>
+    		<h1> {{ today_task }} </h1>
     	</div>
 
     	<div class="tab" data-tab="prediction" data-active=false >
-    		<h5>Today you can:</h5>
-    		<h1>{{ today_prediction }}</h1>
+    		<h5> today you can: </h5>
+    		<h1> {{ today_prediction }} </h1>
     	</div>
 	</div>
 	
