--- a/app/templates/main/better_life.html.j2
+++ b/app/templates/main/better_life.html.j2
@@ -1,5 +1,5 @@
 {% extends "base.html.j2" %}
-{% block title %} Improve your life {% endblock %}
+{% block title %} today {% endblock %}
 
 {% block script %}
 	{% from 'javascript/stimulus.js.html' import stimulus %}
