--- a/app/templates/main/portfolio.html.j2
+++ b/app/templates/main/portfolio.html.j2
@@ -16,27 +16,27 @@
         
         <br>
         
-        <span class="ml-2">
+        <span>
             <a href="ketokalkulacka.cz" style="color: grey;">
                 <strong> ketokalkulačku </strong> 
             </a>
         </span><br>
-        <span class="ml-2 font-italic">
+        <span class="font-italic">
             která pomáhá lidem se speciální dietou
         </span><br>
     
         <br>
 
-        <span class="ml-2">
+        <span>
             <a href="skautskakucharka.cz" style="color: grey;">
                 <strong> skautskou kuchařku </strong> 
             </a>
         </span><br>
-        <span class="ml-2 font-italic">
+        <span class="font-italic">
             která usnadňuje vytváření a správu jídelníčků a nákupů
         </span><br>
-        <span class="ml-2 font-italic">
-            na (zejména) velkých akcích - kurzy, tábory
+        <span class="font-italic">
+            zejména na velkých akcích jako jsou kurzy a tábory
         </span><br>
 
         <br>
@@ -45,7 +45,7 @@
 
         <br>
         
-        <span class="ml-2">
+        <span>
             <a href="{{url_for('main.better')}}" style="color: grey;">
                 <strong> náhodná věc, kterou si můžu zlepšit den </strong> 
             </a>
@@ -58,7 +58,7 @@
         
         <br>
         
-        <span class="ml-2">
+        <span>
             proto tu mám 
             <a href="{{ url_for('main.show_songbooks') }}" style="color: grey;">
                 <strong> zpěvníky </strong> 
