--- a/app/templates/main/portfolio.html.j2
+++ b/app/templates/main/portfolio.html.j2
@@ -17,7 +17,7 @@
         <br>
         
         <span>
-            <a href="ketokalkulacka.cz" style="color: grey;">
+            <a href="https://ketokalkulacka.cz" style="color: grey;">
                 <strong> ketokalkulačku </strong> 
             </a>
         </span><br>
@@ -28,7 +28,7 @@
         <br>
 
         <span>
-            <a href="skautskakucharka.cz" style="color: grey;">
+            <a href="https://skautskakucharka.cz" style="color: grey;">
                 <strong> skautskou kuchařku </strong> 
             </a>
         </span><br>
