Remove Flask-Scripts

--- a/app/templates/education/genetic_world_generator.html.j2
+++ b/app/templates/education/genetic_world_generator.html.j2
@@ -3,12 +3,12 @@
 
 {% block head %}
     {{ super() }}
-    {{ init_charts }}
+    ## {{ init_charts }}
 {% endblock %}
 
-{% block script %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-{% endblock %}
+## {% block script %}
+    ## <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+## {% endblock %}
 
 {% block content %}
 
